--- a/backmatters.tex
+++ b/backmatters.tex
@@ -3,13 +3,15 @@
 %\include{dicfa2en}
 %\clearpage{\pagestyle{empty}\cleardoublepage}
 %\include{dicen2fa}
+\clearpage{\pagestyle{empty}\cleardoublepage}
 \printglossary
 }
-\clearpage{\pagestyle{empty}\cleardoublepage}
-{\baselineskip=.6cm
+%\clearpage{\pagestyle{empty}\cleardoublepage}
+%{\baselineskip=.6cm
 %\phantomsection
-\addcontentsline{toc}{chapter}{نمایه}
-\printindex}
+%\addcontentsline{toc}{chapter}{نمایه}
+%\printindex
+%}
 \clearpage{\pagestyle{empty}\cleardoublepage}
 %\phantomsection
 %\addcontentsline{toc}{chapter}{مراجع}
