--- a/biblio.bib
+++ b/biblio.bib
@@ -48,6 +48,13 @@
   author = {Michael R. Garey and David S. Johnson},
   title = {Computers and intractability : a guide to the theory of NP-completeness}
 }
+@book{Diestel_2010,
+  isbn = {3642142788},
+  year = {2010},
+  publisher = {Springer},
+  author = {Reinhard Diestel},
+  title = {Graph Theory},
+}
 @inproceedings{Bach_2008,
   title={Graph kernels between point clouds},
   author={Bach, Francis R},
