--- a/chapter2.tex
+++ b/chapter2.tex
@@ -1,9 +1,9 @@
 \chapter{گرافلت کرنل گاوسی}\label{chap:gaussian-graphlet-kernel}
-گرافلت‌ها انتخاب خوبی برای مقایسه دو گراف هستند. دلیل این انتخاب اولاً \خمیده{فرضیه بازسازی گراف}\پانوشت{\متنلاتین{graph reconstruction conjecture}}\جستار{Kelly_1957} است که بیان می‌کند هر گراف بطور یکتا توسط زیرگراف‌هایش مشخص می‌شود. بنابراین انتظار داریم اگر دو گراف شبیه هم باشند، گردایه‌ی زیرگراف‌های آن‌ها نیز مشابه باشد. ثانیاً به دلیل استفاده از تعداد زیرگراف‌های با اندازه ثابت، این مقایسه دچار مشکل رفت و برگشت و هالتینگ نمی‌شود.
+گرافلت‌ها انتخاب خوبی برای مقایسه دو گراف هستند. دلیل این انتخاب اولاً \خمیده{فرضیه بازسازی گراف}\جستار{Kelly_1957} است که بیان می‌کند هر گراف بطور یکتا توسط زیرگراف‌هایش مشخص می‌شود. بنابراین انتظار داریم اگر دو گراف شبیه هم باشند، گردایه‌ی زیرگراف‌های آن‌ها نیز مشابه باشد. ثانیاً به دلیل استفاده از تعداد زیرگراف‌های با اندازه ثابت، این مقایسه دچار مشکل رفت و برگشت و هالتینگ نمی‌شود.
 در این فصل ابتدا نحوه شمارش گرافلت‌ها را شرح داده و سپس گرافلت کرنل گاوسی را معرفی می‌کنیم و به سنجش قدرت آن در جداسازی مدل‌های تصادفی گراف از یکدیگر، می‌پردازیم.
 
 \section{گرافلت‌ها و شمارش آن‌ها}
-گرافلت‌ها، زیرگراف‌های کوچک القایی بین سه تا پنج رأس از یک گراف بزرگتر هستند\جستار{Przulj_2004} که با برچسب $G1,\ldots,G29$ در شکل \ارجا{fig:graphlets} نمایش داده شده‌اند (معمولاً زیرگراف تک یالی $G0$ هم به این مجموعه اضافه می‌شود).  رئوس هر گرافلت به گروه‌های خودریختی\پانوشت{\متنلاتین{automorphism}} تقسیم می‌شوند که به آن‌ها اوربیت\پانوشت{\متنلاتین{orbit}} گفته می‌شود. دو رأس از یک گرافلت به یک اوربیت تعلق دارند اگر توسط یک تابع خودریختی به یکدیگر نگاشت شوند. در شکل \ارجا{fig:graphlets}، اوربیت‌ها با اعداد صفر تا 72 روی هر گرافلت مشخص شده‌اند و رنگ رئوس نشان‌دهنده تعلق آن‌ها به اوربیت‌های یکسان است. از گرافلت‌ها و اوربیت‌ها در اندازه‌گیری شباهت ساختاری شبکه‌های تعاملات پروتئینی\پانوشت{\متنلاتین{Protein Interaction Networks}}\جستار{Przulj_2007}، انتخاب مدل تصادفی برای آن‌ها\جستار{Przulj_2004} و همچنین برای تراز کردن\پانوشت{\متنلاتین{alignment}} این شبکه‌ها\جستار{Milenkovic_2010}\جستار{Kuchaiev_2010}\جستار{Memisevic_2012} استفاده شده‌است.
+گرافلت‌ها، زیرگراف‌های کوچک القایی بین سه تا پنج رأس از یک گراف بزرگتر هستند\جستار{Przulj_2004} که با برچسب $G1,\ldots,G29$ در شکل \ارجا{fig:graphlets} نمایش داده شده‌اند (معمولاً زیرگراف تک یالی $G0$ هم به این مجموعه اضافه می‌شود).  رئوس هر گرافلت به گروه‌های \واژه{خودریختی} تقسیم می‌شوند که به آن‌ها \واژه{اوربیت} گفته می‌شود. دو رأس از یک گرافلت به یک اوربیت تعلق دارند اگر توسط یک تابع خودریختی به یکدیگر نگاشت شوند. در شکل \ارجا{fig:graphlets}، اوربیت‌ها با اعداد صفر تا 72 روی هر گرافلت مشخص شده‌اند و رنگ رئوس نشان‌دهنده تعلق آن‌ها به اوربیت‌های یکسان است. از گرافلت‌ها و اوربیت‌ها در اندازه‌گیری شباهت ساختاری \واژها{شبکه‌ تعاملی پروتئینی}\جستار{Przulj_2007}، انتخاب مدل تصادفی برای آن‌ها\جستار{Przulj_2004} و همچنین برای \خمیده{\واژه{تراز کردن}} این شبکه‌ها\جستار{Milenkovic_2010}\جستار{Kuchaiev_2010}\جستار{Memisevic_2012} استفاده شده‌است.
 
 شمارش گرافلت‌های یک گراف (و طبیعتاً اوربیت‌ها) از لحاظ محاسباتی بسیار زمانبر است. به همین دلیل معمولاً از روش‌های نمونه‌برداری برای تخمین تعداد آن‌ها استفاده می‌شود\جستار{Rahman_2014}\جستار{Milenkovic_2008}. به‌تازگی، الگوریتمی برای شمارش اوربیت‌ها\جستار{Hovcevar_2014} ارائه شده‌است که تعداد آن‌ها را به طور دقیق و در زمان بسیار کم محاسبه می‌نماید. با استفاده از این الگوریتم، می‌توان تعداد گرافلت‌ها را نیز محاسبه کرد. ذکر این نکته ضروری است که برخلاف تصور، استفاده از اوربیت‌ها برای تعریف کرنل (بجای گرافلت‌ها) موجب افزایش نویز و در نتیجه، کاهش دقت می‌گردد. در بخش \ارجا{sec:graphlet-vs-orbit} به بررسی این مسئله می‌پردازیم.
 
@@ -122,18 +122,18 @@ k(G,G') = exp(-\gamma\parallel \hat{C}_G - \hat{C}_{G'}\parallel^2)
 اردوش\پانوشت{\متنلاتین{Erdős}} و رنی\پانوشت{\متنلاتین{Rényi}} در سال ۱۹۵۹ مدلی برای گراف‌های تصادفی ارائه دادند\جستار{Erdos_1959} که اکنون به مدل \متنلاتین{ER} معروف است. گراف تصادفی اردوش-رنی $G(n,p)$، یک گراف با $n$ رأس است که در آن، یال‌ها به صورت مستقل و به احتمال $p$ از بین تمام یال‌های ممکن انتخاب شده‌اند. گرافی که با این روند تولید شود دارای توزیع درجه دوجمله‌ای است. برای $n$ های بزرگ و $p$‌ کوچک، توزیع درجه، پواسون با میانگین $np$ خواهد بود.
 
 \paragraph{مدل تصادفی واتس و استروگاتس (WS)}
-این مدل در سال ۱۹۹۸ توسط واتس\پانوشت{\متنلاتین{Duncan J. Watts}} و استروگاتس\پانوشت{\متنلاتین{Steven Strogatz}} معرفی شد\جستار{Watts_1998} و اولین مدلی است که خاصیت جهان کوچک\پانوشت{\متنلاتین{Small-World}} را شبیه سازی می‌کند. این خاصیت بیان می‌کند که هر دو فرد در جهان با چند واسطه به یکدیگر متصل می‌شوند و تعداد این واسطه‌ها زیاد نیست (معمولاً بین ۳ تا ۶ واسطه). یک گراف تصادفی واتس و استروگاتس روی $N$ رأس، با میانگین درجه $K$ و پارامتر $\beta$ (
+این مدل در سال ۱۹۹۸ توسط واتس\پانوشت{\متنلاتین{Duncan J. Watts}} و استروگاتس\پانوشت{\متنلاتین{Steven Strogatz}} معرفی شد\جستار{Watts_1998} و اولین مدلی است که خاصیت \واژه{جهان کوچک} را شبیه سازی می‌کند. این خاصیت بیان می‌کند که هر دو فرد در جهان با چند واسطه به یکدیگر متصل می‌شوند و تعداد این واسطه‌ها زیاد نیست (معمولاً بین ۳ تا ۶ واسطه). یک گراف تصادفی واتس و استروگاتس روی $N$ رأس، با میانگین درجه $K$ و پارامتر $\beta$ (
 $0\leq \beta \leq 1$ و $N \geq K \geq ln(N) \geq 1$
 ) به صورت زیر ساخته می‌شود:
 \begin{enumerate}
 \فقره گرافی با $N$ رأس و هر رأس با $K$ همسایه، $K/2$ در سمت راست و $K/2$ در سمت چپ، در نظر گرفته می‌شود.
-\فقره اگر رئوس را با برچسب‌گذاری $n_0,\ldots,n_N-1$ مشخص کنیم، برای هر رأس، هر یال $(n_i,n_j)$ که $i < j$ به احتمال $\beta$ بازنشانی\پانوشت{\متنلاتین{rewire}} می‌شود. در اینجا، بازنشانی یعنی تعویض یال $(n_i,n_j)$ با یال $(n_i,n_k)$ که $n_k$ به احتمال یکنواخت از بین دیگر رئوس انتخاب می‌شود به شرطی که گراف، ساده باقی بماند.
+\فقره اگر رئوس را با برچسب‌گذاری $n_0,\ldots,n_N-1$ مشخص کنیم، برای هر رأس، هر یال $(n_i,n_j)$ که $i < j$ به احتمال $\beta$ \واژه{بازنشانی} می‌شود. در اینجا، بازنشانی یعنی تعویض یال $(n_i,n_j)$ با یال $(n_i,n_k)$ که $n_k$ به احتمال یکنواخت از بین دیگر رئوس انتخاب می‌شود به شرطی که گراف، ساده باقی بماند.
 \end{enumerate}
 
 \paragraph{مدل تصادفی باراباشی و آلبرت (BA)}
-مدل تصادفی باراباشی\پانوشت{\متنلاتین{Barabasi}}-آلبرت\پانوشت{\متنلاتین{Albert}} در سال ۱۹۹۹ برای مدل‌سازی خاصیت \متنلاتین{scale-free} در شبکه‌های واقعی (مثل شبکه وب و یا خطوط انتقال برق)، طراحی شد\جستار{Barabasi_1999}. این خاصیت بیان می‌کند که اولاً شبکه‌ها در حال رشد کردن هستند یعنی به تعداد رئوس آن‌ها اضافه می‌شود، و ثانیاً احتمال بوجود آمدن یال بین رئوس جدید و رئوسی که بیشترین درجه را دارند، بیشتر است. این خاصیت در واقع اشاره‌ای به \خمیده{اثر متیو}\پانوشت{\متنلاتین{Matthew}} است که بیان می‌کند «پولدار، پولدارتر می‌شود»\جستار{Merton_1968}. برای تولید گراف با این خاصیت، یک گراف همبند با $n$ رأس در نظر گرفته می‌شود. رئوس جدید، یکی یکی به گراف افزوده می‌شوند. هر رأس جدید می‌تواند به $n$ رأس قبل؛ به احتمالی بر حسب درجه رئوس، متصل شود. احتمال اینکه رأس جدید به رأس $n_i$ متصل شود برابر است با
+مدل تصادفی باراباشی\پانوشت{\متنلاتین{Barabasi}}-آلبرت\پانوشت{\متنلاتین{Albert}} در سال ۱۹۹۹ برای مدل‌سازی خاصیت \واژه{مقیاس آزاد} در شبکه‌های واقعی (مثل شبکه وب و یا خطوط انتقال برق)، طراحی شد\جستار{Barabasi_1999}. این خاصیت بیان می‌کند که اولاً شبکه‌ها در حال رشد کردن هستند یعنی به تعداد رئوس آن‌ها اضافه می‌شود، و ثانیاً احتمال بوجود آمدن یال بین رئوس جدید و رئوسی که بیشترین درجه را دارند، بیشتر است. این خاصیت در واقع اشاره‌ای به \خمیده{اثر متیو}\پانوشت{\متنلاتین{Matthew}} است که بیان می‌کند «پولدار، پولدارتر می‌شود»\جستار{Merton_1968}. برای تولید گراف با این خاصیت، یک گراف همبند با $n$ رأس در نظر گرفته می‌شود. رئوس جدید، یکی یکی به گراف افزوده می‌شوند. هر رأس جدید می‌تواند به $n$ رأس قبل؛ به احتمالی بر حسب درجه رئوس، متصل شود. احتمال اینکه رأس جدید به رأس $n_i$ متصل شود برابر است با
 $\dfrac{k_i}{\sum_jk_j}$ 
-که $k_i$ درجه رأس $n_i$ و جمع، روی کل رئوس گراف تا لحظه اضافه کردن $n_i$ است. گرافی که با این روند ساخته شود، دارای توزیع درجه \خمیده{توانی}\پانوشت{\متنلاتین{power law}} با پارامتر $\lambda = 3$ است. این توزیع به شکل $P(k) \sim k^{-\lambda}$ تعریف می‌شود.
+که $k_i$ درجه رأس $n_i$ و جمع، روی کل رئوس گراف تا لحظه اضافه کردن $n_i$ است. گرافی که با این روند ساخته شود، دارای \خمیده{\واژه{توزیع توانی}} درجه با پارامتر $\lambda = 3$ است. این توزیع به شکل $P(k) \sim k^{-\lambda}$ تعریف می‌شود.
 
 \paragraph{مدل تصادفی هندسی (GEO)}
 مدل گراف تصادفی هندسی برای مدل‌سازی و تحلیل شبکه‌های سنسور بی‌سیم\جستار{Bettstetter_2002} و همچنین شبکه‌های تعاملات پروتئینی\جستار{Przulj_2004} مورد استفاده قرار گرفته است. در این مدل، 
@@ -143,7 +143,7 @@ $\dfrac{k_i}{\sum_jk_j}$
 هدف از ارائه این مدل، ساخت گراف از روی دنباله درجه‌ی دلخواه، و در نتیجه، توزیع درجه دلخواه بوده‌است\جستار{Molloy_1995}. در این مدل، برای هر دنباله درجه‌ی قابل قبول (یعنی جمع اعداد دنباله، عددی زوج باشد)، از گردایه‌ی گراف‌ها با آن توزیع درجه، یک گراف به صورت تصادفی انتخاب می‌شود. البته باید توجه داشت که گراف‌های حاصل الزاماً ساده نیستند. برای تبدیل گراف به یک گراف ساده، طوقه‌ها و یال‌های چندگانه از گراف حذف می‌شوند. اینکار باعث تغییر در دنباله درجه می‌شود که البته در گراف‌های بزرگ، این تغییر قابل چشم‌پوشی است. در این مدل، متناسب با دنباله درجه داده شده مثل $\vec{k}$، $n$ رأس در نظر گرفته می‌شود. به هر رأس $n_i$ متناسب با درجه در نظر گرفته شده برای آن، $k_i$ نیم یال نسبت داده می‌شود. نیم‌یال‌ها به صورت تصادفی به یکدیگر متصل می‌شوند. نتیجه یک گراف با توزیع درجه داده‌ شده خواهد بود.
 
 \subsection{داده‌‌ها}
-از مدل‌های تصادفی معرفی شده، گراف‌هایی با اندازه ۱۰ تا ۱۰۰۰ رأس تولید شد. جدول \ارجا{tab:random-graph-datasets-statistics} پارامترهای انتخابی برای هر مدل و تعداد گراف‌های تولید شده را مشخص کرده‌است. ذکر این نکته ضروری است که تضمینی برای همبندی گراف‌های تولید شده برای بعضی مدل‌ها وجود ندارد. به همین دلیل، پس از تولید گراف‌ها، بزرگترین مؤلفه همبندی هر کدام استخراج و به عنوان گراف نهایی مورد استفاده قرار گرفته‌است. در بعضی مواقع، دو مؤلفه همبندی اندازه یکسان داشته‌اند که در این صورت، یکی از آن‌ها به صورت تصادفی حذف شده‌است. لذا تعداد گراف‌های نهایی برای مدل‌های مختلف، متفاوت است. همچنین توجه شود که از مدل ترتیبی ساخت گراف تصادفی برای تولید گراف‌هایی با توزیع درجه \متنلاتین{power law} در توان‌های مختلف استفاده شده‌است. برای این مدل‌ها، ستون پارامتر، توان تابع توزیع را مشخص می‌کند.
+از مدل‌های تصادفی معرفی شده، گراف‌هایی با اندازه ۱۰ تا ۱۰۰۰ رأس تولید شد. جدول \ارجا{tab:random-graph-datasets-statistics} پارامترهای انتخابی برای هر مدل و تعداد گراف‌های تولید شده را مشخص کرده‌است. ذکر این نکته ضروری است که تضمینی برای همبندی گراف‌های تولید شده برای بعضی مدل‌ها وجود ندارد. به همین دلیل، پس از تولید گراف‌ها، بزرگترین مؤلفه همبندی هر کدام استخراج و به عنوان گراف نهایی مورد استفاده قرار گرفته‌است. در بعضی مواقع، دو مؤلفه همبندی اندازه یکسان داشته‌اند که در این صورت، یکی از آن‌ها به صورت تصادفی حذف شده‌است. لذا تعداد گراف‌های نهایی برای مدل‌های مختلف، متفاوت است. همچنین توجه شود که از مدل ترتیبی ساخت گراف تصادفی برای تولید گراف‌هایی با \واژه{توزیع توانی} درجه در توان‌های مختلف استفاده شده‌است. برای این مدل‌ها، ستون پارامتر، توان تابع توزیع را مشخص می‌کند.
 
 \begin{table}[ht]
 \centering
@@ -164,8 +164,8 @@ $\dfrac{k_i}{\sum_jk_j}$
 \label{tab:random-graph-datasets-statistics}
 \end{table}
 
-\subsection{جداسازی گراف‌های scale-free از یکدیگر}
-با تغییر در پارامتر $\lambda$، ساختار گراف‌های scale-free و بسیاری از مشخصه‌های آن‌ها از جمله طول کوتاهترین مسیر، قطر گراف، تعداد یال‌ها، ضریب خوشه‌بندی و ... تغییر می‌کند. شکل \ارجا{fig:scale-free-distance} شباهت گراف‌های مجموعه‌های \متنلاتین{PW2}، \متنلاتین{PW3} و \متنلاتین{PW4} نسبت به گراف‌های مجموعه \متنلاتین{PW1} را با استفاده از گرافلت‌کرنل گاوسی (با پارامتر $\gamma = 2$) نشان می‌دهد. در این شکل، محور افقی اندازه گراف و محور عمودی، فاصله گراف‌ها از گراف‌های مرجع (\متنلاتین{PW1}) را مشخص می‌کند. هر چه این عدد برای یک گراف به یک نزدیکتر باشد، یعنی این گراف شباهت کمتری به گراف متناظر در \متنلاتین{PW1} دارد.
+\subsection{جداسازی گراف‌های مقیاس آزاد از یکدیگر}
+با تغییر در پارامتر $\lambda$، ساختار گراف‌های \واژه{مقیاس آزاد} و بسیاری از مشخصه‌های آن‌ها از جمله طول کوتاهترین مسیر، قطر گراف، تعداد یال‌ها، ضریب خوشه‌بندی و ... تغییر می‌کند. شکل \ارجا{fig:scale-free-distance} شباهت گراف‌های مجموعه‌های \متنلاتین{PW2}، \متنلاتین{PW3} و \متنلاتین{PW4} نسبت به گراف‌های مجموعه \متنلاتین{PW1} را با استفاده از گرافلت‌کرنل گاوسی (با پارامتر $\gamma = 2$) نشان می‌دهد. در این شکل، محور افقی اندازه گراف و محور عمودی، فاصله گراف‌ها از گراف‌های مرجع (\متنلاتین{PW1}) را مشخص می‌کند. هر چه این عدد برای یک گراف به یک نزدیکتر باشد، یعنی این گراف شباهت کمتری به گراف متناظر در \متنلاتین{PW1} دارد.
 
 \begin{figure}[t]
 \centering
@@ -174,7 +174,7 @@ $\dfrac{k_i}{\sum_jk_j}$
 \label{fig:scale-free-distance}
 \end{figure}
 
-به نظر می‌رسد که گرافلت کرنل گاوسی می‌تواند بخوبی بین گراف‌های \متنلاتین{scale-free} با پارامتر‌های مختلف، تفاوت قائل شود. با استفاده از یک ماشین \متنلاتین{C-SVM} میزان دقت کرنل در تفکیک این گراف‌ها اندازه‌گیری شده‌است. نحوه انجام اندازه‌گیری به این شرح است که ابتدا داده‌ها به صورت تصادفی به ۱۰ قسمت تقسیم شده‌اند. از ۹ قسمت برای آموزش ماشین، و از قسمت باقی مانده برای سنج دقت، استفاده شده‌است. به این کار، \متنلاتین{10-fold cross validation} گفته می‌شود. پس از میزان کردن پارامتر‌ $C$ برای ماشین و $\gamma$ برای کرنل، و ۱۰ بار تکرار آزمایش، نتایج موجود در جدول \ارجا{tab:svm-scale-free} بدست آمد.
+به نظر می‌رسد که گرافلت کرنل گاوسی می‌تواند بخوبی بین گراف‌های مقیاس آزاد با پارامتر‌های مختلف، تفاوت قائل شود. با استفاده از یک ماشین \متنلاتین{C-SVM} میزان دقت کرنل در تفکیک این گراف‌ها اندازه‌گیری شده‌است. نحوه انجام اندازه‌گیری به این شرح است که ابتدا داده‌ها به صورت تصادفی به ۱۰ قسمت تقسیم شده‌اند. از ۹ قسمت برای آموزش ماشین، و از قسمت باقی مانده برای سنج دقت، استفاده شده‌است. به این کار، \واژه{اعتبارسنجی متقابل}ِ ۱۰-تایی گفته می‌شود. پس از میزان کردن پارامتر‌ $C$ برای ماشین و $\gamma$ برای کرنل، و ۱۰ بار تکرار آزمایش، نتایج موجود در جدول \ارجا{tab:svm-scale-free} بدست آمد.
 
 \begin{table}[ht]
 \centering
