--- a/introduction.tex
+++ b/introduction.tex
@@ -3,27 +3,27 @@
 \addcontentsline{toc}{chapter}{مقدمه}
 \chapter*{مقدمه}\markboth{مقدمه}{مقدمه}
 
-امروزه با پیشرفت تکنولوژی و گسترش دانش، بشر با تولید حجم عظیمی از داده‌ها\پانوشت{data} روبرو است. شرکت‌های تجاری، مراکز علمی و مؤسسات تحقیقاتی سعی دارند از این داده‌ها در جهت برآوردن نیاز مشتریان، درک بهتر جهان هستی و ساخت تکنولوژی‌های جدید بهره ببرند. استفاده از این داده‌ها جز با استخراج دانش از آن‌ها ممکن نیست. طراحی روش و الگوریتم برای استنتاج قواعد کلی از یک سری داده‌ی مشاهده شده، موضوع اصلی یادگیری ماشین است.
+امروزه با پیشرفت تکنولوژی و گسترش دانش، بشر با تولید حجم عظیمی از \واژه{داده} روبرو است. شرکت‌های تجاری، مراکز علمی و مؤسسات تحقیقاتی سعی دارند از این داده‌ها در جهت برآوردن نیاز مشتریان، درک بهتر جهان هستی و ساخت تکنولوژی‌های جدید بهره ببرند. استفاده از این داده‌ها جز با استخراج دانش از آن‌ها ممکن نیست. طراحی روش و الگوریتم برای استنتاج قواعد کلی از یک سری داده‌ی مشاهده شده، موضوع اصلی یادگیری ماشین است.
 
-داده یک مفهوم قراردادی و وابسته به \واژه{دامنه}{Domain} است. از این‌رو برای نمایش آن، روش‌های مختلفی وجود دارد: در بعضی کاربردها، کافی است داده‌ها را به صورت عددی یا \واژه{برداری}{vector} از اعداد نمایش داد. اما در برخی موارد، نمایش سطح بالاتری برای بیان حق مطلب مورد نیاز است. برای مثال، اگر بخواهیم موضوع یک متن را بر اساس تکرار کلمات پیش‌بینی کنیم، کافی است یک بردار عددی تشکیل دهیم که عناصر این بردار نمایش‌دهنده میزان تکرار کلمات از پیش تعیین شده در آن متن است. اما اگر بخواهیم بین رفتار یک مولکول با ساختار آن رابطه‌ای برقرار کنیم، آنگاه نمی‌توان به سادگی مولکول را یک عدد یا برداری از اعداد در نظر گرفت. ساختار مولکول و همچنین بسیاری دیگر از داده‌ها معمولاً با بهره‌گیری از گراف‌ها مدل می‌شود.
+داده یک مفهوم قراردادی و وابسته به \واژه{دامنه} است. از این‌رو برای نمایش آن، روش‌های مختلفی وجود دارد: در بعضی کاربردها، کافی است داده‌ها را به صورت عددی یا \واژه{بردار}ی از اعداد نمایش داد. اما در برخی موارد، نمایش سطح بالاتری برای بیان حق مطلب مورد نیاز است. برای مثال، اگر بخواهیم موضوع یک متن را بر اساس تکرار کلمات پیش‌بینی کنیم، کافی است یک بردار عددی تشکیل دهیم که عناصر این بردار نمایش‌دهنده میزان تکرار کلمات از پیش تعیین شده در آن متن است. اما اگر بخواهیم بین رفتار یک مولکول با ساختار آن رابطه‌ای برقرار کنیم، آنگاه نمی‌توان به سادگی مولکول را یک عدد یا برداری از اعداد در نظر گرفت. ساختار مولکول و همچنین بسیاری دیگر از داده‌ها معمولاً با بهره‌گیری از گراف‌ها مدل می‌شود.
 
-گراف ابزاری ساده و انعطاف‌پذیر برای توصیف اشیاء و ارتباط بین آن‌هاست. یک گراف از یک مجموعه \واژه{گره‌}{Node} و یک مجموعه \واژه{یال‌}{Edge} که ارتباط بین گره‌ها را معین می‌کند، تشکیل می‌شود. معمولاً  گره‌ها، موجودیت‌ها و یال‌ها، ارتباط بین موجودیت‌ها را نمایش می‌دهند. به عنوان مثال، می‌توان یک شبکه اجتماعی را با استفاده از گراف مدل کرد: مجموعه‌ی گره‌ها، مجموعه‌ی اعضای این شبکه و هر یال بین دو گره، نشان‌دهنده‌ی ارتباط دو عضو متناظر در آن شبکه اجتماعی است؛ به همین ترتیب می‌توان یک مولکول را با یک گراف مدل کرد: مجموعه‌ی گره‌ها، مجموعه‌ی اتم‌های آن مولکول و هر یال بین دو گره نمایانگر وجود یک پیوند بین اتم‌های متناظر است. همانطور که از این دو مثال مشخص است گاهی موجودیت مورد مطالعه، یک گره در یک گراف است و ارتباط آن با دیگر عناصر در یک سیستم بزرگتر نمایش‌داده می‌شود و گاه کل یک گراف نمایشی از یک موجودیت است که در این حالت، گره‌ها و یال‌ها نمایش‌دهنده‌ی عناصر سازنده آن موجودیت هستند.
+گراف ابزاری ساده و انعطاف‌پذیر برای توصیف اشیاء و ارتباط بین آن‌هاست. یک گراف از یک مجموعه \واژه{گره} یا \واژه{رأس} و یک مجموعه یال که ارتباط بین گره‌ها را معین می‌کند، تشکیل می‌شود. معمولاً  گره‌ها، موجودیت‌ها و یال‌ها، ارتباط بین موجودیت‌ها را نمایش می‌دهند. به عنوان مثال، می‌توان یک شبکه اجتماعی را با استفاده از گراف مدل کرد: مجموعه‌ی گره‌ها، مجموعه‌ی اعضای این شبکه و هر یال بین دو گره، نشان‌دهنده‌ی ارتباط دو عضو متناظر در آن شبکه اجتماعی است؛ به همین ترتیب می‌توان یک مولکول را با یک گراف مدل کرد: مجموعه‌ی گره‌ها، مجموعه‌ی اتم‌های آن مولکول و هر یال بین دو گره نمایانگر وجود یک پیوند بین اتم‌های متناظر است. همانطور که از این دو مثال مشخص است گاهی موجودیت مورد مطالعه، یک گره در یک گراف است و ارتباط آن با دیگر عناصر در یک سیستم بزرگتر نمایش‌داده می‌شود و گاه کل یک گراف نمایشی از یک موجودیت است که در این حالت، گره‌ها و یال‌ها نمایش‌دهنده‌ی عناصر سازنده آن موجودیت هستند.
 
 به دلیل همین انعطاف‌پذیری، گراف در بسیاری از رشته‌ها مورد توجه قرار گرفته است و بسیاری از انواع داده با گراف مدل می‌شوند. در زیر به کاربرد گراف در دو رشته که با موضوع پایان‌نامه پیشرو مرتبط است، اشاره می‌کنیم.
 
-\درشت{شیمی} یکی از رشته‌هایی است که استفاده‌ی فراوانی از گراف دارد\جستار{Gasteiger_2003}. جستجو برای یافتن ترکیبات شیمیایی‌ که خواص مشخصی داشته باشند امری رایج در شیمی است. روش‌های آزمایشگاهی برای اینکار بسیار پر هزینه و زمانبر هستند. از اینرو روش‌های محاسباتی‌ای مورد نیاز است که بتواند چند ترکیب با خصوصیات مدنظر را به عنوان نامزد معرفی کند. در این صورت می‌توان با هزینه‌ی کمتر این نامزدها را در آزمایشگاه مورد سنجش قرار داد. برای این منظور، ترکیبات شیمیایی به صورت گراف-همانطور که در بالا شرح داده‌شد-مدل می‌شوند. در روش محاسباتی، که معمولاً با عنوان QSAR و QSPR شناخته می‌شود فرض این است که مولکول‌هایی که ساختار مشابه دارند دارای خواص مشابه هستند. بنابراین اندازه‌گیری میزان شباهت دو گراف مسئله‌ای مهم در \واژه{شیمی محاسباتی}{chemoinformatics} است.
+\درشت{شیمی} یکی از رشته‌هایی است که استفاده‌ی فراوانی از گراف دارد\جستار{Gasteiger_2003}. جستجو برای یافتن ترکیبات شیمیایی‌ که خواص مشخصی داشته باشند امری رایج در شیمی است. روش‌های آزمایشگاهی برای اینکار بسیار پر هزینه و زمانبر هستند. از اینرو روش‌های محاسباتی‌ای مورد نیاز است که بتواند چند ترکیب با خصوصیات مدنظر را به عنوان نامزد معرفی کند. در این صورت می‌توان با هزینه‌ی کمتر این نامزدها را در آزمایشگاه مورد سنجش قرار داد. برای این منظور، ترکیبات شیمیایی به صورت گراف-همانطور که در بالا شرح داده‌شد-مدل می‌شوند. در روش محاسباتی، که معمولاً با عنوان QSAR و QSPR شناخته می‌شود فرض این است که مولکول‌هایی که ساختار مشابه دارند دارای خواص مشابه هستند. بنابراین اندازه‌گیری میزان شباهت دو گراف مسئله‌ای مهم در \واژه{شیمی محاسباتی} است.
 
-\درشت{\واژه{بیوانفورماتیک}{bioinformatics}} شاخه نسبتاً جدیدی در زیست‌شناسی است که استفاده از گراف در آن رایج است\جستار{Junker_2008}. از گراف‌ برای نمایش داده‌هایی نظیر \واژه{ساختار پروتئین‌}{protein structure}، \واژه{هم‌بیانی}{co-expression} پروتئین‌ها یا ژن‌ها، \واژه{تعاملات پروتئین-پروتئین}{protein-protein interactions}، \واژه{شبکه‌های تنظیمی}{شبکه تنظیمی}{Regulatory Networks}{Regulatory Network} و شبکه‌های متابولیک\پانوشت{\متنلاتین{metabolic networks}} استفاده می‌شود. سؤالات جالبی در ارتباط با این گراف‌ها مطرح می‌شود. مثلاً ارتباط ساختار پروتئین با خصوصیات یا عملکرد\پانوشت{function} آن چیست، آیا می‌توان با استفاده از ساختار پروتئین‌ها تعاملات بین آن‌ها را پیش‌بینی کرد، شبکه‌های تنظیمی چطور بر روی رُخ‌نمود\پانوشت{phenotype} تاثیر دارند و سؤالاتی از این دست. تا به امروز، داده‌های زیستی به طور معمول ناکامل و نویزدار هستند و طبیعتاً گراف‌هایی که از آن‌ها بدست می‌آید تصویر درست و کاملی ارائه نمی‌کند. به همین دلیل استفاده از تکنیک‌های یادگیری ماشین در این رشته، پر کاربرد و در عین حال چالش برانگیز است.
+\درشت{\واژه{بیوانفورماتیک}} شاخه نسبتاً جدیدی در زیست‌شناسی است که استفاده از گراف در آن رایج است\جستار{Junker_2008}. از گراف‌ برای نمایش داده‌هایی نظیر ساختار پروتئین‌، \واژه{هم‌بیانی} پروتئین‌ها یا ژن‌ها، \واژه{تعاملات پروتئین-پروتئین}، \واژها{شبکه تنظیمی} و \واژها{شبکه متابولیک} استفاده می‌شود. سؤالات جالبی در ارتباط با این گراف‌ها مطرح می‌شود. مثلاً ارتباط ساختار پروتئین با خصوصیات یا \واژه{عملکرد} آن چیست، آیا می‌توان با استفاده از ساختار پروتئین‌ها \واژها{تعامل} بین آن‌ها را پیش‌بینی کرد، شبکه‌های تنظیمی چطور بر روی \واژه{رخ نمود} تاثیر دارند و سؤالاتی از این دست. تا به امروز، داده‌های زیستی به طور معمول ناکامل و نویزدار هستند و طبیعتاً گراف‌هایی که از آن‌ها بدست می‌آید تصویر درست و کاملی ارائه نمی‌کند. به همین دلیل استفاده از تکنیک‌های یادگیری ماشین در این رشته، پر کاربرد و در عین حال چالش برانگیز است.
 
 علاوه بر این رشته‌ها، گراف‌ها در تحلیل شبکه‌های اجتماعی\جستار{Carrington_2005}، پردازش تصویر\جستار{Lezoray_2012} و تحلیل شبکه‌ جهانی وب مورد استفاده گسترده قرار می‌گیرند.
 
-درست است که گراف تصویر روشن و ملموسی از داده بدست می‌دهد، اما این ویژگی هزینه‌ی خود را دارد: بسیاری از عمل‌ها\پانوشت{operations} که برای ساختارهایی نظیر آرایه و ماتریس بدیهی هستند، برای گراف تعریف نشده و یا پیچیده‌اند. برای مثال می‌توان به رابطه تساوی اشاره کرد. هیچ الگوریتمی برای تست برابری دو گراف وجود ندارد که در زمان خطی قابل اجرا باشد\جستار{Garey_1979}.
+درست است که گراف تصویر روشن و ملموسی از داده بدست می‌دهد، اما این ویژگی هزینه‌ی خود را دارد: بسیاری از \واژها{عمل} که برای ساختارهایی نظیر آرایه و ماتریس بدیهی هستند، برای گراف تعریف نشده و یا پیچیده‌اند. برای مثال می‌توان به رابطه تساوی اشاره کرد. هیچ الگوریتمی برای تست برابری دو گراف وجود ندارد که در زمان خطی قابل اجرا باشد\جستار{Garey_1979}.
 
 اکثر تکنیک‌های قوی در یادگیری ماشین با داده‌های برداری که نمایش دهنده‌ی نقاط در فضای اقلیدسی هستند، کار می‌کنند و به روشی برای اندازه‌گیری شباهت بین این نقاط نیاز دارند. به همین دلیل، تحقیقات روی گراف‌ها و یادگیری ماشین بیشتر به سمت نمایش گراف‌ها در قالب بردار در فضای اقلیدسی (و یا فضاهای برداری دیگر) گرایش دارد. هرچند نحوه تبدیل گراف به بردار یا ساختارهای دیگر، وابسته به موضوع مورد مطالعه است، اما طرح روشی که عمومیت و انعطاف‌پذیری داشته باشد مورد توجه قرار خواهد گرفت.
 
 در این پایان‌نامه برآنیم که مشکلات روش‌های پیشین برای اندازه‌گیری میزان شباهت دو گراف را شرح دهیم و روش بهتری به همین منظور ارائه کنیم.
 
-در فصل \ارجا{chap:prerequisites} بطور مختصر نظریه‌ی گراف، مقایسه گراف‌ها، روش تابع کرنل\پانوشت{\متنلاتین{kernel method}} در یادگیری ماشین و توابع کرنل گرافی\پانوشت{\متنلاتین{graph kernels}} را بررسی می‌کنیم. در فصل \ارجا{chap:gaussian-graphlet-kernel} تابع گرافلت کرنل گاوسی\پانوشت{\متنلاتین{gaussian graphlet kernel}} را معرفی می‌کنیم و دقت آن را در تشخیص مد‌ل‌های تصادفی گراف از یکدیگر، می‌سنجیم. در فصل \ارجا{chap:protein_function_prediction} توانایی تابع گرافلت کرنل گاوسی در پیش‌بینی عملکرد پروتئین‌ها را مورد مطالعه قرار می‌دهیم و نشان می‌دهیم که این کرنل در مقایسه با کرنل‌های پیشین، دقت بالاتری دارد. و در آخر، در فصل \ارجا{chap:network-completion-problem-ppi} از گرافلت کرنل گاوسی برای پیش‌بینی تعاملات پروتئینی و تصحیح تعاملات موجود، استفاده می‌کنیم. 
+در فصل \ارجا{chap:prerequisites} بطور مختصر نظریه‌ی گراف، مقایسه گراف‌ها، \واژه{روش‌های مبتنی بر کرنل} در یادگیری ماشین و \واژه{توابع کرنل گرافی} را بررسی می‌کنیم. در فصل \ارجا{chap:gaussian-graphlet-kernel} تابع \واژه{گرافلت} کرنل گاوسی\پانوشت{\متنلاتین{أGaussian graphlet kernel}} را معرفی می‌کنیم و دقت آن را در تشخیص مد‌ل‌های تصادفی گراف از یکدیگر، می‌سنجیم. در فصل \ارجا{chap:protein_function_prediction} توانایی تابع گرافلت کرنل گاوسی در پیش‌بینی عملکرد پروتئین‌ها را مورد مطالعه قرار می‌دهیم و نشان می‌دهیم که این کرنل در مقایسه با کرنل‌های پیشین، دقت بالاتری دارد. و در آخر، در فصل \ارجا{chap:network-completion-problem-ppi} از گرافلت کرنل گاوسی برای پیش‌بینی تعاملات پروتئینی و تصحیح تعاملات موجود، استفاده می‌کنیم. 
 
 \subsection*{
 مقالات مستخرج از این پایان نامه
