--- a/commands.tex
+++ b/commands.tex
@@ -41,6 +41,7 @@ node4/.style={circle,draw,fill,double=black,color=gray!30,align=center}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 % فراخوانی بسته زی‌پرشین و تعریف قلم فارسی و انگلیسی
 \usepackage{xepersian}
+
 \settextfont[Scale=1.15]{XB Niloofar}
 %\setiranicfont[Scale=1]{PersianModern-Oblique}
 \setiranicfont[Scale=1.15]{XB Zar Oblique}
@@ -81,7 +82,7 @@ node4/.style={circle,draw,fill,double=black,color=gray!30,align=center}}
 \newtheorem{remark}[definition]{ملاحظه}
 \newtheorem{example}[definition]{مثال}
 %%%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\جستار}[1] {\cite{#1}}
+\newcommand{\جستار}[1]{\,\cite{#1}}
 \newcommand{\ارجا}[1]{\ref{#1}}
 \newcommand{\درشت}[1]{\textbf{#1}}
 \newcommand{\خمیده}[1]{\textit{#1}}
@@ -193,23 +194,23 @@ node4/.style={circle,draw,fill,double=black,color=gray!30,align=center}}
 %% تعریف استایل برای واژه نامه فارسی به انگلیسی،
 \newglossarystyle{myFaToEn}{%
 	\renewenvironment{theglossary}{}{}
-	\renewcommand*{\glsgroupskip}{\vskip 10mm}
+	\renewcommand*{\glsgroupskip}{\vskip 1mm}
 	\renewcommand*{\glsgroupheading}[1]{\subsection*{\glsgetgrouptitle{##1}}}
 	\renewcommand*{\glossentry}[2]{
-	  \noindent\glsentryname{##1}\dotfill\space \glsentrytext{##1}
+	  \noindent\glsentryname{##1}\dotfill\space\glsentrytext{##1}\\
 	}
 }
 
 \newglossarystyle{myEntoFa}{%
 	\renewenvironment{theglossary}{}{}
-	\renewcommand*{\glsgroupskip}{\vskip 10mm}
+	\renewcommand*{\glsgroupskip}{\vskip 1mm}
 	\renewcommand*{\glsgroupheading}[1]{
 	  \begin{LTR}
 	  \subsection*{\glsgetgrouptitle{##1}}
 	  \end{LTR}
 	}
 	\renewcommand*{\glossentry}[2]{
-	  \noindent\glsentrytext{##1}\dotfill\space \glsentryname{##1}
+	  \noindent\glsentrytext{##1}\dotfill\space \glsentryname{##1}\\
 	}
 }
 
@@ -235,25 +236,32 @@ node4/.style={circle,draw,fill,double=black,color=gray!30,align=center}}
 
 \newcommand{\renewglossaryentry}[1]{\ifglsentryexists{#1}{\global\csundef{glo@#1@name}}{}\newglossaryentry{#1}}
 
-\newcommand{\newword}[4]{\renewglossaryentry{#1}     {type={english},name={\lr{#2}},plural={#4},text={#3},description={}}
-\renewglossaryentry{f-#1} {type={persian},name={#3},text={\lr{#2}},description={}}}
+\newcommand{\newword}[4]{\newglossaryentry{#1}     {type={english},name={\lr{#2}},plural={#4},text={#3},description={}}
+\newglossaryentry{f-#1} {type={persian},name={#3},text={\lr{#2}},description={}}}
 
-\newcommand{\واژه}[2]{\newword{#2}{#2}{#1}{}\gls{#2}}
+\newcommand{\واژه}[1]{\gls{#1}}
+\newcommand{\واژها}[1]{\glspl{#1}}
 
 \let\Oldprintglossary\printglossary
 \renewcommand{\printglossary}{
 	\let\appendix\relax
 	%\phantomsection
     \thispagestyle{empty}
+	\addcontentsline{toc}{chapter}{واژه نامه فارسی به انگلیسی}
+	\noindent
+	\onecolumn{}
+	\setglossarystyle{myFaToEn}
+	\Oldprintglossary[type=persian]
+%	\clearpage{\thispagestyle{empty}\cleardoublepage}
+	%\phantomsection
+    \thispagestyle{empty}
 	\addcontentsline{toc}{chapter}{واژه نامه انگلیسی به فارسی}
 	\noindent
 	\setglossarystyle{myEntoFa}
 	\Oldprintglossary[type=english]
-	\clearpage{\thispagestyle{empty}}
-	%\phantomsection
-    \thispagestyle{empty}
-	\addcontentsline{toc}{chapter}{واژه نامه فارسی به انگلیسی}
-	\noindent
-	\setglossarystyle{myFaToEn}
-	\Oldprintglossary[type=persian]
+	\onecolumn{}
 }%
+
+\newcommand{\واژتعریف}[3]{\newword{#1}{#2}{#1}{#3}}
+
+\include{dict}
