--- a/preface.tex
+++ b/preface.tex
@@ -7,4 +7,4 @@
 
 \خمیده{گرافلت‌} مفهومی است که در چند سال اخیر برای مقایسه شبکه‌ها و گراف‌ها مورد استفاده قرار گرفته و توانایی خود برای خلاصه‌سازی گراف را اثبات کرده‌است. از گرافلت‌ها در تعریف تابع کرنل استفاده شده که البته به دلیل سرعت اجرای بسیار پایین، استفاده از آن غیر ممکن است. در این پایان‌نامه می‌خواهیم با تعریف گرافلت کرنل گاوسی، مشکلات قبلی استفاده از گرافلت در تعریف یک تابع کرنل را رفع کنیم. همچنین از این تابع کرنل، برای پیش‌بینی عملکرد پروتئین استفاده می‌کنیم و نشان می‌دهیم که این کرنل، چه از نظر سرعت و چه از نظر دقت، از کرنل‌های مشابه بهتر عمل می‌کند. سپس از آن در مسئله \خمیده{تکمیل شبکه} روی شبکه‌های تعاملات پروتئین استفاده می‌کنیم.
 
-هدف از مسئله تکمیل شبکه، پیش‌بینی قسمت‌های دیده نشده از یک شبکه (\متنلاتین{false negatives}) و همچنین تصحیح قسمت‌های اشتباه آن (\متنلاتین{false positives}) است. به دلیل خطا در روش‌های آزمایشگاهی، شبکه‌های تعاملات پروتئین موجود اشتباهات زیادی در حدود ۳۵ تا ۷۰ درصد دارند. یک راه حل برای تشخیص اشتباهات و پیش‌بینی تعاملات دیده نشده، استفاده از روش \خمیده{گسترش شبکه} است. به این ترتیب که ابتدا یک قسمت از شبکه با درصد اطمینان بالا را انتخاب می‌کنیم و مدل ریاضی آن را می‌سازیم. سپس مابقی شبکه را طبق مدل تشخیصی بازسازی می‌کنیم.
+هدف از مسئله تکمیل شبکه، پیش‌بینی قسمت‌های دیده نشده از یک شبکه (\واژه{منفی کاذب}) و همچنین تصحیح قسمت‌های اشتباه آن (\واژه{مثبت کاذب}) است. به دلیل خطا در روش‌های آزمایشگاهی، شبکه‌های تعاملات پروتئین موجود اشتباهات زیادی در حدود ۳۵ تا ۷۰ درصد دارند. یک راه حل برای تشخیص اشتباهات و پیش‌بینی تعاملات دیده نشده، استفاده از روش \خمیده{گسترش شبکه} است. به این ترتیب که ابتدا یک قسمت از شبکه با درصد اطمینان بالا را انتخاب می‌کنیم و مدل ریاضی آن را می‌سازیم. سپس مابقی شبکه را طبق مدل تشخیصی بازسازی می‌کنیم.
